=== HEAD

* Add a setter method for one_through_one associations (jeremyevans)

* Include :remarks entry in JDBC schema parsing output, containing comments on the column (olleolleolle) (#1143)

* Support :eager_reload and :eager options to associations in tactical_eager_loading plugin (jeremyevans)

* Make tactical_eager_loading not eager load if passing proc or block to association method (jeremyevans)

* Make eager_each plugin handle eager loading for Dataset#first and similar methods (jeremyevans)

=== 4.31.0 (2016-02-01)

* Convert types in association_pks setters before saving them, instead of just before running queries (jeremyevans)

* Use getField and getOID instead of field and oid in the jdbc/postgresql adapter to work around JRuby 9.0.5.0 regression (jeremyevans) (#1137)

* Support using PostgreSQL-specific types in bound variables in the jdbc/postgresql adapter (jeremyevans)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

* Make Database#disconnect in the oracle adapter work correctly on newer versions of oci8 (jeremyevans)

* Support parsing PostgreSQL arrays with explicit bounds (jeremyevans) (#1131)

* Raise an error if attempting to use a migration file not containing a single migration (jeremyevans) (#1127)

* Automatically set referenced key for self referential foriegn key constraint for simple non-autoincrementing primary key on MySQL (jeremyevans) (#1126)

=== 4.30.0 (2016-01-04)

* Add Dataset#insert_conflict and #insert_ignore on SQLite for handling uniqueness violations (Sharpie) (#1121)

* Make Database#row_type in pg_row extension handle different formats of schema-qualified types (jeremyevans) (#1119)

* Add identifier_columns plugin for handling column names containing 2 or more consecutive underscores when saving (jeremyevans) (#1117)

* Support :eager_limit and :eager_limit_strategy dataset options in model eager loaders for per-call limits and strategies (chanks) (#1115)
